# ctcsound-Example

./: pyproject.toml
